<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_code"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/item_text"/>
        <app.android.mingjiang.com.androidbootstrap.BootstrapEditText
            android:id="@+id/out_code"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:editable="false"
            android:textSize="@dimen/item_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        >
        <TextView
            style="@style/textview_query_style"
            android:text="@string/materialid"
            />
        <TextView
            style="@style/textview_query_style"
            android:text="@string/materialname"
            />
        <TextView
            style="@style/textview_query_style"
            android:text="@string/material_number"
            />
        <TextView
            style="@style/textview_query_style"
            android:text="@string/seat_code"
            />
        <TextView
            style="@style/textview_query_style"
            android:text="@string/submit_oper" />
    </LinearLayout>

    <ListView
        android:id="@+id/material_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
