<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/materialid"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_text"/>
            <app.android.mingjiang.com.androidbootstrap.BootstrapEditText
                android:id="@+id/material_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/materialname"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_text"/>
            <app.android.mingjiang.com.androidbootstrap.BootstrapEditText
                android:id="@+id/material_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seat_id"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_text"/>
            <app.android.mingjiang.com.androidbootstrap.BootstrapEditText
                android:id="@+id/seat_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservoir_area"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_text"/>
            <app.android.mingjiang.com.androidbootstrap.BootstrapEditText
                android:id="@+id/reservoir_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_size"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_text"
                />
            <Spinner
                android:id="@+id/page_size"
                android:layout_weight="1"
                android:entries="@array/page_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_number"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_text"
                />
            <app.android.mingjiang.com.androidbootstrap.BootstrapEditText
                android:id="@+id/page_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_text"
                android:layout_weight="1"
                android:text="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
            <app.android.mingjiang.com.androidbootstrap.BootstrapButton
                android:id="@+id/material_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="35dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:text="@string/query"
                android:background="#000099"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        >
        <TextView
            style="@style/textview_query_style"
            android:text="@string/materialid"
            />
        <TextView
            style="@style/textview_query_style"
            android:text="@string/materialname"
            />
        <TextView
            style="@style/textview_query_style"
            android:text="@string/seat_id"
            />
        <TextView
            style="@style/textview_query_style"
            android:text="@string/safety_stock"
            />
        <TextView
            style="@style/textview_query_style"
            android:text="@string/lib_number"
            />
        <TextView
            style="@style/textview_query_style"
            android:text="@string/material_safety"
            />
        <TextView
            style="@style/textview_query_style"
            android:text="@string/shortage"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/midel_material_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
</LinearLayout>
