<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/bg_on"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/weld_imageveiw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dip"
                android:layout_marginTop="10dp"
                android:gravity="left|center_vertical"
                android:text="@string/perfusion_machine"
                android:textColor="#ffffff"
                android:textSize="30dp" />

            <TextClock
                android:id="@+id/weldClock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="right|center_vertical"
                android:textColor="#ffffff"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>
    <!-- 管理数据-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_line"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <!-- 设备名称-->
                <TextView
                    style="@style/weld_static_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:text="@string/device_name" />

                <TextView
                    android:id="@+id/device_name"
                    style="@style/weld_static_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/perfusion_machine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <!-- 岗位-->
                <TextView
                    style="@style/weld_static_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post" />

                <TextView
                    android:id="@+id/post"
                    style="@style/weld_static_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="灌氟" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <!-- 前置工序-->
                <TextView
                    style="@style/weld_static_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pre_step" />

                <TextView
                    android:id="@+id/pre_step"
                    style="@style/weld_static_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="抽真空" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <!-- 后置工序-->
                <TextView
                    style="@style/weld_static_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/af_step" />

                <TextView
                    android:id="@+id/af_step"
                    style="@style/weld_static_content"
                    android:layout_width="wrap_content"
                    android:padding="3dp"
                    android:layout_height="wrap_content"
                    android:text="灌氟封口焊接" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <!-- 设置状态-->
                <TextView
                    style="@style/weld_static_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equip_status" />

                <TextView
                    android:id="@+id/equip_status"
                    style="@style/weld_static_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="运行中"
                    android:padding="3dp"
                    android:background="@color/green"
                    android:textColor="@color/white_line" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- 工艺数据 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:text="条码"/>
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:text="时间"/>
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:visibility="gone"
                    android:text="灌注枪"/>
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:visibility="gone"
                    android:text="程序序号"/>
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:visibility="gone"
                    android:text="真空度"/>
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:visibility="gone"
                    android:text="实际真空度"/>
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:visibility="gone"
                    android:text="设定克数"/>
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:visibility="gone"
                    android:text="实际克数"/>
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:text="灌注结果"/>
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:visibility="gone"
                    android:text="制冷剂代码"/>
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:visibility="gone"
                    android:text="制冷剂类型"/>
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:visibility="gone"
                    android:text="冷媒温度"/>
                <TextView
                    style="@style/textview_perfusion_machine"
                    android:visibility="gone"
                    android:text="冷媒压力"/>
            </LinearLayout>
            <ListView
                android:id="@+id/lv_filler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:divider="#00000000">
            </ListView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="刷新"/>

    </LinearLayout>
</LinearLayout>
